backend/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-dev
  template:
    metadata:
      labels:
        app: backend-dev
    spec:
      containers:
      - name: backend
        image: ghcr.io/willcataco-los-papus-y-sebas/willcataco-server:dev-3d0c5c2973ebdab9cb42802ca42cff8b9d48e7f4
        ports:
        - containerPort: 8000
