backend/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-dev
  namespace: willcataco-dev
spec:
  selector:
    app: backend-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
