backend/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-dev
  namespace: willcataco-dev
spec:
  ingressClassName: nginx
  rules:
  - host: dev-api-willcataco.chakisoft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-dev
            port:
              number: 80
